--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "basscss": "^8.0.2",
     "core-js": "^3.6.5",
     "draggabilly": "^2.3.0",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "sass": "^1.26.10",
     "vue": "^2.6.11",
