--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "express": "^4.17.1",
     "http-server": "^0.12.3",
     "sass-loader": "^9.0.2",
     "vue-template-compiler": "^2.6.11"
