--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "sass": "^1.26.10",
     "vue": "^2.6.11",
     "vue-material": "^1.0.0-beta-14",
-    "vue-material-slider": "^1.0.1"
+    "vue-material-slider": "^1.0.1",
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
