--- a/package.json
+++ b/package.json
@@ -3,34 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node server.js",
-    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve",
+    "start": "node server.js"
   },
   "dependencies": {
-    "basscss": "^8.0.2",
-    "core-js": "^3.6.5",
+    "basscss": "^8.1.0",
+    "core-js": "^3.18.1",
     "draggabilly": "^2.3.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
-    "sass": "^1.26.10",
-    "vue": "^2.6.11",
-    "vue-material": "^1.0.0-beta-14",
-    "vue-material-slider": "^1.0.1",
-    "vue-router": "^3.3.4"
+    "sass": "^1.42.1",
+    "vue": "^2.6.14",
+    "vue-class-component": "^7.2.3",
+    "vue-material": "^1.0.0-beta-15",
+    "vue-material-slider": "^1.1.8",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-typescript": "^4.5.13",
     "@vue/cli-service": "~4.4.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "express": "^4.17.1",
     "http-server": "^0.12.3",
-    "sass-loader": "^9.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass-loader": "^9.0.3",
+    "typescript": "~4.1.5",
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
@@ -39,10 +46,11 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@vue/typescript"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@typescript-eslint/parser"
     },
     "rules": {}
   },
