--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@types/vue": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli": "^4.5.13",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
     "@vue/cli-plugin-typescript": "^4.5.13",
-    "@vue/cli-service": "~4.4.0",
+    "@vue/cli-service": "~4.5.13",
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
