--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "basscss": "^8.1.0",
     "core-js": "^3.18.1",
     "draggabilly": "^2.3.0",
+    "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "sass": "^1.42.1",
@@ -21,7 +22,8 @@
     "vue-material": "^1.0.0-beta-15",
     "vue-material-slider": "^1.1.8",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.5.2"
+    "vue-router": "^3.5.2",
+    "vue-social-sharing": "^3.0.8"
   },
   "devDependencies": {
     "@types/vue": "^2.0.0",
