--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@types/vue-clickaway": "^2.2.0",
     "@types/vue-material": "git+https://github.com/calebsander/vue-material-types.git",
     "basscss": "^8.1.0",
+    "chartist": "^0.11.4",
     "core-js": "^3.18.1",
     "draggabilly": "^2.3.0",
     "es6-promise": "^4.2.8",
@@ -19,6 +21,7 @@
     "sass": "^1.42.1",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
+    "vue-clickaway": "^2.2.2",
     "vue-material": "^1.0.0-beta-15",
     "vue-material-slider": "^1.1.8",
     "vue-property-decorator": "^9.1.2",
